# CI_CD_Project

./: .clang-format  CMakeLists.txt  Dockerfile
.github/workflows/: build.yml
include/: sum.h
src/: main.cpp  sum.cpp
tests/: tests.cpp
